# stem-separator

./: .gitignore  README.rst  main.py  pyproject.toml
docs/: report.rst
stem_separator/: audio_processor.py  cli.py  config.py  models.py  plotter.py
